<resources>
    <string name="app_name">Custo de Viagem</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total sera de</string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="colocar_Valor">Você precisa colocar os valores.</string>
</resources>